--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue-sonner": "^2.0.9",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "yup": "^1.3.3"
   },
   "devDependencies": {
